# longevity-rag

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.copilot/: config.json
.github/: CONTRIBUTING.md  SECURITY.md
.github/ISSUE_TEMPLATE/: 01-faiss-vector-store.md  02-neo4j-knowledge-graph.md  03-bioclinical-bert-ner.md  04-redis-caching.md  05-cross-encoder-reranking.md  06-production-deployment.md  bug_report.md  feature_request.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: ci.yml  test.yml
docs/: EMBEDDINGS_IMPLEMENTATION.md  GITHUB_ISSUES.md  PROJECT_SUMMARY.md  SESSION_COMPLETION.md  api.md  embeddings-setup.md  project-plan.md
docs/quality/: code-analysis.md  progress.md
memory-bank/: app-description.md  change-log.md
scripts/: README.md  example_usage.py  ingest_sample.py
src/: __init__.py
src/api/: server.py
src/biomarkers/: analysis.py
src/knowledge_graph/: graph_client.py  schema.py
src/nlp/: embeddings.py  ner.py
src/rag/: core.py  generator.py  retriever.py  vector_store.py
src/utils/: __init__.py  config.py  errors.py  logger.py  pubmed_client.py  timing.py  validation.py
tests/unit/: test_chunking.py  test_embeddings.py  test_rag_system.py  test_utils.py  test_validation.py
